--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="TDF/Tribute SQL Explorer" />
-        <link rel="stylesheet" href="/css/fontawesome.css" type="text/css" />
+		<meta
+			name="description"
+			content="Want to receive gifts that you know you will love? Giftamizer is the perfect answer. It’s your very own personal gift registry. Whether you’re online or in-store, you can add anything you’d like to receive – from your favourite bottle of wine or perfect pair of shoes to a new mountain bike or weekend away. Share with your friends or family and invite them to share with you! <i>Gift Giving just got a whole lot better."
+		/>
+		<link rel="stylesheet" href="/css/fontawesome.css" type="text/css" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -16,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>TSE</title>
+		<title>Giftamizer</title>
 
 		<style>
 			body,
