--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
 	<head>
 		<title>Giftamizer</title>
+		<meta name="description" content="An easier way to organize your gifts." />
 
 		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="theme-color" content="#ffffff" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="An easier way to organize your gifts." />
-		<link rel="stylesheet" href="/css/fontawesome.css" type="text/css" />
-
+		<meta name="description" content="Web site created using create-react-app" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -46,29 +50,9 @@
 			::-webkit-scrollbar-track {
 				opacity: 0;
 			}
-			.extraTooltipClass {
-				pointer-events: auto !important;
-				&:hover {
-					visibility: visible !important;
-					opacity: 1 !important;
-				}
-			}
-			.extraSupportCellClass {
-				text-overflow: ellipsis;
-				overflow: hidden;
-				white-space: nowrap;
-				max-width: 120px;
-			}
-
-			.tableLink:link {
-				color: #00a9e2;
-				background-color: transparent;
-			}
-			.tableLink:visited {
-				color: #006688;
-				background-color: transparent;
-			}
 		</style>
+
+		<link rel="stylesheet" href="/css/fontawesome.css" type="text/css" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
@@ -82,10 +66,5 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-	-->
-
-		<script crossorigin src="https://unpkg.com/react@16.13.1/umd/react.production.min.js"></script>
-		<script crossorigin src="https://unpkg.com/universal-cookie@3/umd/universalCookie.min.js"></script>
-		<script crossorigin src="https://unpkg.com/react-cookie@3/umd/reactCookie.min.js"></script>
-	</body>
+    --></body>
 </html>
