--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,16 @@
 			::-webkit-scrollbar-track {
 				opacity: 0;
 			}
+
+			.cropper-crop-box,
+			.cropper-view-box {
+				border-radius: 50%;
+			}
+
+			.cropper-view-box {
+				box-shadow: 0 0 0 1px #39f;
+				outline: 0;
+			}
 		</style>
 
 		<link rel="stylesheet" href="/css/fontawesome.css" type="text/css" />
