item card, import stuff and metadata grabber

--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,12 @@
 				opacity: 0;
 			}
 
-			.cropper-crop-box,
-			.cropper-view-box {
+			.rounded-crop .cropper-crop-box,
+			.rounded-crop .cropper-view-box {
 				border-radius: 50%;
 			}
 
-			.cropper-view-box {
+			.rounded-crop .cropper-view-box {
 				box-shadow: 0 0 0 1px #39f;
 				outline: 0;
 			}
